[kcms/users]: Don't hardcode the list of avatars

This replaces a hardcoded list of avatars with searching in $DATA_DIRS/plasma-avatars, which allows distros to ship their own avatars

BUG: 426777